Blockchain Security first Mobile devices

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -42,7 +42,7 @@
 <body>
 <header>
   <div id="nav_bar" class="nav_bar wrapper">
-    <div id="logo" class="logo-purple">
+    <div id="logo">
       <svg class="monk" width="37px" height="44px" viewBox="0 0 37 44" version="1.1" xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink">
         <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -211,21 +211,21 @@
   <section id="we-offer2" class="offer2">
     <div class="mdc-layout-grid offer2_bg">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-0-phone mdc-layout-grid__cell--span-0-tablet mdc-layout-grid__cell--span-2-desktop">
         </div>
-        <div class="offer2-box offer2-box_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+        <div class="offer2-box offer2-box_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3>Infrastructure</h3>
           <p>You shall not underestimate the hosting of infrastructure and its security. We know what is needed to be
             done and we will set it up for you. Decentralizovane projekty vyzaduju decentralizovanu architekturu, vieme
             vam pomoct so setupom your nodes and master nodes, make it always scalable and manage its security.</p>
         </div>
-        <div class="offer2-box offer2-box_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+        <div class="offer2-box offer2-box_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3>Consultations</h3>
           <p>If not sure, where to start with your ICO or dApp, you can discuss your current idea with us. We can help
             you with matters of Security audits, cryptography, architecture, training, testing, code review, code
             update, and everything else that is part of our skillset.</p>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-0-phone mdc-layout-grid__cell--span-0-tablet mdc-layout-grid__cell--span-2-desktop">
         </div>
       </div>
     </div>
