Blockchain - Button Hire Our Dteam

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -139,7 +139,7 @@
             for you blockchain idea?</h1>
         </div>
         <div class="opening_button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <a href="" class="button">HIRE OUR DTEAM</a>
+          <a href="#contact" class="button">HIRE OUR DTEAM</a>
         </div>
       </div>
     </div>
