Blockchain: změna textu + změna main buttonu

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -136,7 +136,7 @@
       <div class="mdc-layout-grid__inner">
         <div class="developers mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h1>Wanna developers
-            for you blockchain idea?</h1>
+            for your blockchain idea?</h1>
         </div>
         <div class="opening_button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <a href="#contact" class="button">HIRE OUR DTEAM</a>
@@ -156,11 +156,13 @@
     <div class="mdc-layout-grid values_bg">
       <div class="mdc-layout-grid__inner">
 
-        <div class="value_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <div
+          class="value_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <h3>Your freedom can't affect the<br> freedom of others</h3>
           <p>We realize that the freedom comes with responsibility.</p>
         </div>
-        <div class="value_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <div
+          class="value_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <h3>Life is a constant change.<br> Embrace it.</h3>
           <p>We never lose our heads when facing chaos.</p>
         </div>
@@ -172,8 +174,8 @@
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2> Let's&nbsp;get rid of the centralized services and support the freedom of the
-            individual together. Welcome to the world of TopMonks blockchain&nbsp;ideas.</h2>
+          <h2>Let's&nbsp;get rid of the centralized services and support the freedom of the
+            individual together. Welcome to the world of TopMonks Blockchain.</h2>
         </div>
       </div>
     </div>
@@ -186,46 +188,32 @@
           <h2>What Can We Do for You?</h2>
         </div>
         <div class="offer_box offer_box-white mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-          <h3 class="blockchain_bubble">Blockchain development</h3>
-          <p>We will provide the entire blockchain technology service; from core blockchain development to decentralized
-            applications on the top of it. We can connect the developed blockchain to a particular existing API of the
-            centralized application. </p>
+          <h3 class="aApps_bubble">dApps development</h3>
+          <ul>
+            <li>UX design</li>
+            <li>dApp back-end</li>
+            <li>dApp front-end</li>
+            <li>bulletproof smartcontracts</li>
+          </ul>
         </div>
         <div class="offer_box offer_box-purple mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-          <h3 class="aApps_bubble">dApps development</h3>
-          <p>We trained our developers to build a bulletproof and error-free
-            smartcontracts. They can prepare the whole set of smartcontracts for your ICO,
-            and also develop your mobile/web dApp's&nbsp;interface. The dTeam provide a full
-            package service; UX design, dApp back-end, dApp front-end, smartcontracts.</p>
+          <h3 class="blockchain_bubble">Blockchain development</h3>
+          <ul>
+            <li>core blockchain development</li>
+            <li>dApps development on the top of it</li>
+            <li>connecting developed blockchain to an API of the centralized application</li>
+            <li>oracle integrations</li>
+          </ul>
         </div>
         <div class="offer_box offer_box-white mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <h3 class="ICO_bubble">ICO</h3>
-          <p>You can make use of our graphic designers who will prepare the whole visual
-            identity; from landing page to dApp UX design. We are ready to kick off ICO, KYC
-            or AML for&nbsp;you.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="we-offer2" class="offer2">
-    <div class="mdc-layout-grid offer2_bg">
-      <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-0-phone mdc-layout-grid__cell--span-0-tablet mdc-layout-grid__cell--span-2-desktop">
-        </div>
-        <div class="offer2-box offer2-box_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
-          <h3>Infrastructure</h3>
-          <p>You shall not underestimate the hosting of infrastructure and its security. We know what is needed to be
-            done and we will set it up for you. Decentralizovane projekty vyzaduju decentralizovanu architekturu, vieme
-            vam pomoct so setupom your nodes and master nodes, make it always scalable and manage its security.</p>
-        </div>
-        <div class="offer2-box offer2-box_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
-          <h3>Consultations</h3>
-          <p>If not sure, where to start with your ICO or dApp, you can discuss your current idea with us. We can help
-            you with matters of Security audits, cryptography, architecture, training, testing, code review, code
-            update, and everything else that is part of our skillset.</p>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-0-phone mdc-layout-grid__cell--span-0-tablet mdc-layout-grid__cell--span-2-desktop">
+          <ul>
+            <li>visual identity</li>
+            <li>landing page</li>
+            <li>dApp UX design</li>
+            <li>KYC</li>
+            <li>AML</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -234,22 +222,34 @@
   <section id="security" class="security">
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
-        <div class="security_first mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div class="security_first mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <img src="images/security-first.svg" class="security_first-img">
-        </div>
-        <div class="security_text mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-          <p>Security matters and you should not take it lightly. Any blockchain network is only as secure as its
-            infrastructure.</p>
-          <p>Security is a crucial part of the development process that we focus on
-            meticulously because once you put your smartcontracts or anything else live,
-            into the blockchain, you can't take it&nbsp;back.</p>
-          <p>We can check your security and provide feedback with the particular steps you
-            can take to make your product more secure. Let's&nbsp;keep your transaction
-            data&nbsp;safe.</p>
         </div>
       </div>
     </div>
   </section>
+
+  <section id="we-offer2" class="offer2">
+    <div class="mdc-layout-grid offer2_bg">
+      <div class="mdc-layout-grid__inner">
+        <div
+          class="offer2-box offer2-box_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
+        </div>
+        <div
+          class="offer2-box offer2-box_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
+          <h3>Consultations</h3>
+          <p>You shall not underestimate the infrastructure and its security. We know what is needed to be done and we
+            will set it up for you. Decentralized projects need decentralized architecture. We know how to set up on
+            your nodes and master nodes, make it always scalable and manage its security.</p>
+        </div>
+        <div
+          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-0-phone mdc-layout-grid__cell--span-0-tablet mdc-layout-grid__cell--span-4-desktop">
+        </div>
+      </div>
+    </div>
+  </section>
+
+
   <section id="our-work" class="our-work">
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
@@ -259,23 +259,22 @@
         <div
           class="our-work_box box1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3 class="h3_larger">We listen</h3>
-          <p>We see the time devoted to your project as an investment into your future. We
-            listen to your ideas and needs and think about the best solution to do the
-            project right the first&nbsp;time.</p>
+          <p>Let's&nbsp;sit down and discuss your ideas. We will contribute with our practical
+            experience and some fresh notion and together, we will create something
+            majestic.</p>
         </div>
         <div
           class="our-work_box box2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-          <h3 class="h3_larger">We develop</h3>
-          <p>We work with the latest technologies to get the best results. We don’t need lengthy training or
-            explanations. We’ll provide you with a great team of senior developers who are ready to work
-            immediately.</p>
+          <h3 class="h3_larger">We deliver</h3>
+          <p>There's&nbsp;no need of lengthy training or other explanations. We'll provide you
+            with a great dTeam which is ready to develop your blockchain or&nbsp;dApp.</p>
         </div>
         <div
           class="our-work_box box3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3 class="h3_larger">We verify</h3>
-          <p>We closely examine and test every idea and every feature in every step of the
-            project. We concentrate on the needs of the end user. We don’t take risks. We
-            don’t launch anything we don’t stand&nbsp;by.</p>
+          <p>Every inaccurate step in blockchain development is hazardous and extremely
+            costly. We know that, and so we test and validate every single move. Your
+            smartcontracts are safe in our&nbsp;hands.</p>
         </div>
       </div>
       <div class="mdc-layout-grid__inner why-topmonks">
@@ -293,15 +292,16 @@
         <div
           class="our-work_members mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3 class="h3_larger">Members of community</h3>
-          <p>We are active participants of blockchain events and hackathons in the first
-            blockchain hub in The Czech Republic&nbsp;&ndash; Paralelni Polis. We are also members
-            of Cryptovalley and Blockchain Slovakia.</p>
+          <p>We are active participants of blockchain events and hackathons, active members of local and european
+            blockchain hubs, well established in the global blockchain investors and advisors network.
+          </p>
         </div>
         <div
           class="our-work_blockstars mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3 class="h3_larger">Blockstars Conference</h3>
-          <p>We co-organized blockchain Summit. Its goal was to promote blockchain through the commercial and startup
-            scene and support new blockchain and ICO projects to offer inspiration both within and beyond the crypto
+          <p>We co-organized Blockstars Summit (<a href="http://www.block-stars.com/">www.block-stars.com</a>) with goal to
+            promote blockchain for the commercial and startup scene and support new
+            blockchain projects to offer inspiration both within and beyond the crypto
             community.</p>
         </div>
       </div>
