--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -359,7 +359,7 @@
           </a>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-          <img src="/images/team/janko.svg">
+          <img src="/images/team/janko.jpg">
           <h4>Jan Lopusek</h4>
           <p>Net-worker</p>
           <a href="">
