--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -361,7 +361,7 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <img src="/images/team/janko.jpg">
           <h4>Jan Lopusek</h4>
-          <p>Net-worker</p>
+          <p>Frog</p>
           <a href="">
             <svg width="35px" height="35px" viewBox="0 0 35 35" version="1.1" xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink">
