--- a/www.topmonks.cz/src/html/shared/footer.html
+++ b/www.topmonks.cz/src/html/shared/footer.html
@@ -20,7 +20,7 @@
             <li><a href="https://studio.topmonks.com/">Startup Studio</a></li>
             <li><a href="https://teams.topmonks.com/">Teams as Service</a></li>
             <li><a href="https://prodeti.topmonks.cz/">Programování pro děti</a></li>
-            <li><a href="/www.topmonks.cz/src/html/kontakt/">Kontakt</a></li>
+            <li><a href="/kontakt/">Kontakt</a></li>
           </ul>
         </nav>
       </div>
