few updates merged back from topmonks.cz

--- a/www.topmonks.com/src/html/meet-us/index.html
+++ b/www.topmonks.com/src/html/meet-us/index.html
@@ -46,7 +46,7 @@
             <p>Every first thursday of the month we hold regular meetup about everything we are interested in.
               Balanced mix of technical and soft themes delivered by our speakers and special guests.</p>
 
-            <div class="links"><a href="http://caffe.topmonks.cz">http://caffe.topmonks.cz</a>
+            <div class="links"><a href="https://caffe.topmonks.cz">https://caffe.topmonks.cz</a>
             </div>
           </div>
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
