minor content and layout fixes

--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -97,7 +97,7 @@
           <p class="box">Provedeme vás světem IT tak, že vše pochopíte.</p>
           <p class="box box--purple">Zbavíme vás starostí. Rizika spojená s&nbsp;technickým řešením umíme
             odhadovat a vyhnout se jim předem.</p>
-          <p class="box box--purple">Přemýšlíme v&nbsp;souvislostech. Zařídíme, aby dával váš produkt
+          <p class="box">Přemýšlíme v&nbsp;souvislostech. Zařídíme, aby dával váš produkt
             logický smysl koncovým uživatelům.</p>
         </div>
       </div>
