--- a/www.topmonks.cz/src/html/jak-pracujeme/price-fx/index.html
+++ b/www.topmonks.cz/src/html/jak-pracujeme/price-fx/index.html
@@ -42,7 +42,7 @@
           <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">2</strong>
             <p>roky od startupu k fungující firmě</p></li>
           <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">1 mil</strong>
-            <p>valuace v KČ</p></li>
+            <p>valuace v Kč</p></li>
           <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">15</strong>
             <p>monků na projektu</p></li>
           <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">9</strong>
