fixing broken link

--- a/www.topmonks.cz/src/html/o-nas/index.html
+++ b/www.topmonks.cz/src/html/o-nas/index.html
@@ -107,7 +107,7 @@
           <li><b>共享</b> Dávej a bude ti dáno.</li>
           <li><b>怪事</b> Zvláštnost, nekonvenčnost je vítána.</li>
         </ul>
-        <p>Jestli tě baví naše hodnoty a myšlenky, <a href="mailto:jobs@topmonks.com">přidej se k nám</a>. Nebo nám <a href="mailto:sales@topmonks.com">dej vědět</a>, jak ti můžeme pomoci s tvým projektem. Anebo nás jednoduše <a href="/contact/">přijď navštívit</a> na jednu z našich mnoha akcí. Moc rádi potkáme nové a zajímavé lidi.</p>
+        <p>Jestli tě baví naše hodnoty a myšlenky, <a href="mailto:jobs@topmonks.com">přidej se k nám</a>. Nebo nám <a href="mailto:sales@topmonks.com">dej vědět</a>, jak ti můžeme pomoci s tvým projektem. Anebo nás jednoduše <a href="/kontakt/">přijď navštívit</a> na jednu z našich mnoha akcí. Moc rádi potkáme nové a zajímavé lidi.</p>
       </div>
     </div>
   </section>
