--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -146,7 +146,7 @@
   </section>
 
   <section id="values" class="values">
-    <div class="mdc-layout-grid wrapper">
+    <div class="mdc-layout-grid wrapper values_title">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Our Main Values</h2>
@@ -222,7 +222,10 @@
     <div class="mdc-layout-grid offer2_bg">
       <div class="mdc-layout-grid__inner">
         <div
-          class="offer2-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-2-desktop">
+          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-2-desktop">
+        </div>
+        <div
+          class="offer2-box_svg mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-2-desktop">
           <svg width="75px" height="70px" viewBox="0 0 75 70" version="1.1" xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink">
             <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -243,7 +246,7 @@
           </svg>
         </div>
         <div
-          class="offer2-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-10-desktop">
+          class="offer2-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <h3>Consultations</h3>
           <p>If not sure, where to start with your ICO or dApp, you can discuss your current idea with us. We can help
             you with matters of Security audits, cryptography, architecture, training, testing, code review, code
@@ -258,13 +261,39 @@
   <section id="security" class="security">
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
-        <div class="security_first mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div
+          class="security_first mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
           <img src="images/security-first.svg" class="security_first-img" alt="Security First">
+        </div>
+        <div
+          class="security_first mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
+
+          <div
+            class="security_first-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
+            <div
+              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
+              <img src="/images/smart-contracts.svg">
+            </div>
+            <div
+              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
+              <img src="/images/infrastructure.svg">
+            </div>
+          </div>
+          <div
+            class="security_first-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
+            <div
+              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
+              <img src="/images/testing.svg">
+            </div>
+            <div
+              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
+              <img src="/images/cryptography.svg">
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
-
 
 
   <section id="our-work" class="our-work">
