Blockchain Microsite - boxy

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -155,18 +155,22 @@
     </div>
     <div class="mdc-layout-grid values_bg">
       <div class="mdc-layout-grid__inner">
-
         <div
-          class="value_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          class="hidden-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop">
+        </div>
+        <div
+          class="value_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3>Your freedom can't affect the<br> freedom of others</h3>
           <p>We realize that the freedom comes with responsibility.</p>
         </div>
         <div
-          class="value_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          class="value_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3>Life is a constant change.<br> Embrace it.</h3>
           <p>We never lose our heads when facing chaos.</p>
         </div>
-
+        <div
+          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop">
+        </div>
       </div>
     </div>
   </section>
@@ -222,10 +226,10 @@
     <div class="mdc-layout-grid offer2_bg">
       <div class="mdc-layout-grid__inner">
         <div
-          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-2-desktop">
+          class="hidden-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop">
         </div>
         <div
-          class="offer2-box_svg mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-2-desktop">
+          class="offer2-box_svg mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-2-desktop">
           <svg width="75px" height="70px" viewBox="0 0 75 70" version="1.1" xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink">
             <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -246,14 +250,14 @@
           </svg>
         </div>
         <div
-          class="offer2-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          class="offer2-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <h3>Consultations</h3>
           <p>If not sure, where to start with your ICO or dApp, you can discuss your current idea with us. We can help
             you with matters of Security audits, cryptography, architecture, training, testing, code review, code
             update, and everything else that is part of our skillset.</p>
         </div>
         <div
-          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-0-phone mdc-layout-grid__cell--span-0-tablet mdc-layout-grid__cell--span-4-desktop">
+          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
         </div>
       </div>
     </div>
@@ -265,28 +269,16 @@
           class="security_first mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
           <img src="images/security-first.svg" class="security_first-img" alt="Security First">
         </div>
-        <div
-          class="security_first mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
-
-          <div
-            class="security_first-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
+        <div class="security_first-boxes mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
+          <div class="mdc-layout-grid__inner">
             <div
-              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
+              class="security_first-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
               <img src="/images/smart-contracts.svg">
-            </div>
-            <div
-              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
               <img src="/images/infrastructure.svg">
             </div>
-          </div>
-          <div
-            class="security_first-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
             <div
-              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
+              class="security_first-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
               <img src="/images/testing.svg">
-            </div>
-            <div
-              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
               <img src="/images/cryptography.svg">
             </div>
           </div>
