--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -273,13 +273,13 @@
           <div class="mdc-layout-grid__inner">
             <div
               class="security_first-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
-              <img src="/images/smart-contracts.svg">
-              <img src="/images/infrastructure.svg">
+              <img src="/images/smart-contracts.svg" alt="Smart Contracts Audit">
+              <img src="/images/infrastructure.svg" alt="Infrastructure">
             </div>
             <div
               class="security_first-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
-              <img src="/images/testing.svg">
-              <img src="/images/cryptography.svg">
+              <img src="/images/testing.svg" alt="Automated Testing">
+              <img src="/images/cryptography.svg" alt="Cryptography">
             </div>
           </div>
         </div>
@@ -337,7 +337,7 @@
         <div
           class="our-work_blockstars mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3 class="h3_larger">Blockstars Conference</h3>
-          <p>We co-organized Blockstars Summit (<a href="http://www.block-stars.com/">www.block-stars.com</a>) with goal
+          <p>We co-organized Blockstars Summit (<a href="http://www.block-stars.com/" >www.block-stars.com</a>) with goal
             to
             promote blockchain for the commercial and startup scene and support new
             blockchain projects to offer inspiration both within and beyond the crypto
@@ -359,7 +359,7 @@
           <img src="/images/team/lea.svg" alt="[photo] Lea Petrášová">
           <h4>Lea Petrášová</h4>
           <p>Blockchain & Crypto Projects</p>
-          <a href="https://www.linkedin.com/in/lea-petr%C3%A1%C5%A1ov%C3%A1-64652185/">
+          <a href="https://www.linkedin.com/in/lea-petr%C3%A1%C5%A1ov%C3%A1-64652185/" name="LinkedIn - Lea Petrášová" title="Lea Petrášová on LinkedIn">
             <svg width="35px" height="35px" viewBox="0 0 35 35" version="1.1" xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink">
               <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -380,7 +380,7 @@
           <img src="/images/team/lumir.svg" alt="[photo] Lumír Mrkva">
           <h4>Lumír Mrkva</h4>
           <p>Tech Lead</p>
-          <a href="https://github.com/lumir-mrkva">
+          <a href="https://github.com/lumir-mrkva" name="Github - Lumír Mrkva" title="Lumír Mrkva on GitHub">
             <svg width="35px" height="36px" viewBox="0 0 35 36" version="1.1" xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink">
               <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -404,7 +404,7 @@
           <img src="/images/team/janko.svg" alt="[photo] Ján Lopušek">
           <h4>Ján Lopušek</h4>
           <p>Net-Worker</p>
-          <a href="https://www.linkedin.com/in/jan-lopusek/">
+          <a href="https://www.linkedin.com/in/jan-lopusek/" name="LinkedIn - Ján Lopušek" title="Ján Lopušek on LinkedIn">
             <svg width="35px" height="35px" viewBox="0 0 35 35" version="1.1" xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink">
               <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
