--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -135,8 +135,8 @@
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="developers mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h1>Wanna developers
-            for your blockchain idea?</h1>
+          <h1>Developers
+            for your blockchain idea</h1>
         </div>
         <div class="opening_button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <a href="#contact" class="button">HIRE OUR DTEAM</a>
@@ -203,9 +203,9 @@
         <div class="offer_box offer_box-purple mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <h3 class="blockchain_bubble">Blockchain development</h3>
           <ul>
-            <li>core blockchain development</li>
+            <li>blockchain core development</li>
             <li>dApps development on the top of it</li>
-            <li>connecting developed blockchain to an API of the centralized application</li>
+            <li>connecting blockchain to custom API, Oracle creation</li>
             <li>oracle integrations</li>
           </ul>
         </div>
@@ -252,9 +252,10 @@
         <div
           class="offer2-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <h3>Consultations</h3>
-          <p>If not sure, where to start with your ICO or dApp, you can discuss your current idea with us. We can help
-            you with matters of Security audits, cryptography, architecture, training, testing, code review, code
-            update, and everything else that is part of our skillset.</p>
+          <p>To help you with blockchain adoption in a decentralized world, we are ready
+            to share our knowledge in all tech-related topics starting with UX design ending
+            with architecture. We can guide you or even design the best fitting solution
+            based on your use-case.</p>
         </div>
         <div
           class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
@@ -269,7 +270,8 @@
           class="security_first mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
           <img src="images/security-first.svg" class="security_first-img" alt="Security First">
         </div>
-        <div class="security_first-boxes mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
+        <div
+          class="security_first-boxes mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
           <div class="mdc-layout-grid__inner">
             <div
               class="security_first-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
@@ -311,8 +313,8 @@
           class="our-work_box box3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3 class="h3_larger">We verify</h3>
           <p>Every inaccurate step in blockchain development is hazardous and extremely
-            costly. We know that, and so we test and validate every single move. Your
-            smartcontracts are safe in our&nbsp;hands.</p>
+            costly. We know that, so we test and validate every single move. Your smart
+            contracts are safe in our&nbsp;hands.</p>
         </div>
       </div>
       <div class="mdc-layout-grid__inner why-topmonks">
@@ -337,7 +339,7 @@
         <div
           class="our-work_blockstars mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3 class="h3_larger">Blockstars Conference</h3>
-          <p>We co-organized Blockstars Summit (<a href="http://www.block-stars.com/" >www.block-stars.com</a>) with goal
+          <p>We co-organized Blockstars Summit (<a href="http://www.block-stars.com/">www.block-stars.com</a>) with goal
             to
             promote blockchain for the commercial and startup scene and support new
             blockchain projects to offer inspiration both within and beyond the crypto
@@ -359,7 +361,8 @@
           <img src="/images/team/lea.svg" alt="[photo] Lea Petrášová">
           <h4>Lea Petrášová</h4>
           <p>Blockchain & Crypto Projects</p>
-          <a href="https://www.linkedin.com/in/lea-petr%C3%A1%C5%A1ov%C3%A1-64652185/" name="LinkedIn - Lea Petrášová" title="Lea Petrášová on LinkedIn">
+          <a href="https://www.linkedin.com/in/lea-petr%C3%A1%C5%A1ov%C3%A1-64652185/" name="LinkedIn - Lea Petrášová"
+             title="Lea Petrášová on LinkedIn">
             <svg width="35px" height="35px" viewBox="0 0 35 35" version="1.1" xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink">
               <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -404,7 +407,8 @@
           <img src="/images/team/janko.svg" alt="[photo] Ján Lopušek">
           <h4>Ján Lopušek</h4>
           <p>Net-Worker</p>
-          <a href="https://www.linkedin.com/in/jan-lopusek/" name="LinkedIn - Ján Lopušek" title="Ján Lopušek on LinkedIn">
+          <a href="https://www.linkedin.com/in/jan-lopusek/" name="LinkedIn - Ján Lopušek"
+             title="Ján Lopušek on LinkedIn">
             <svg width="35px" height="35px" viewBox="0 0 35 35" version="1.1" xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink">
               <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
