--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -12,19 +12,20 @@
           integrity="sha384-pvXSwSU09c+q9mPyY++ygUHWIYRoaxgnJ/JC5wcOzMb/NVVu+IDniiB9qWp3ZNWM"
           crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/stylesheets/main.css">
-  <!--<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">-->
-  <!--<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">-->
-  <!--<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">-->
-  <!--<link rel="manifest" href="/site.webmanifest">-->
-  <!--<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#C567B7">-->
-  <!--<meta name="msapplication-TileColor" content="#7645C1">-->
-  <!--<meta name="theme-color" content="#D5E9FF">-->
-  <link rel="canonical" href="https://blockchain.topmonks.cz/">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#C567B7">
+  <meta name="msapplication-TileColor" content="#7645C1">
+  <meta name="theme-color" content="#D5E9FF">
+  <meta name="description" content="Developers for your blockchain idea">
+  <link rel="canonical" href="https://blockchain.topmonks.com/">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@topmonks">
   <meta name="twitter:title" property="og:title" content="Blockchain">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://blockchain.topmonks.cz/">
+  <meta property="og:url" content="https://blockchain.topmonks.com/">
   <script>(function(w, d, s, l, i) {
     w[l] = w[l] || [];
     w[l].push({
