--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -12,7 +12,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@topmonks">
 <meta name="twitter:title" property="og:title" content="TopMonks - Vývojáři softwaru pro váš byznys">
-<meta name="twitter:image" property="og:image" content="https://www.topmonks.com/images/og-image.png">
+<meta name="twitter:image" property="og:image" content="https://www.topmonks.cz/images/og-image.png">
 <meta property="og:type" content="company">
 <meta property="og:url" content="https://www.topmonks.cz/">
 <meta property="og:site_name" content="TopMonks.cz">
